Task/perf tests (#130)
- use zgc garbage collection.
- collect p50/med stats.
   p50 is more interesting in day to day situations.
   p95 is always very sensitive to the environment (resource exhaustion)
- modify tresholds